Fix footer being stretched out

--- a/style/main.css
+++ b/style/main.css
@@ -118,13 +118,6 @@ footer {
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 50px;
-
-  width: 800px;
-  padding-left: 50px;
-  padding-right: 50px;
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
   text-align: center;
 }
 
@@ -180,7 +173,7 @@ pre {
     }
 
     #mainContent img {
-        width: 300px;
+        /* width: 300px; */
     }
 }
 
@@ -193,12 +186,6 @@ pre {
     .nav-bucket {
         padding: 5px;
         float: none;
-    }
-
-    footer {
-      width: 100%;
-      padding-left: 5px;
-      padding-right: 5px;
     }
     
     #mainContent {
